--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
+    "@vime/core": "^5.4.0",
+    "@vime/react": "^5.4.0",
+    "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "graphql": "^16.6.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
